nes-systests/systest/tests/testdata/errors/result/ExpectedIsColumnSubsetOfResult.dummy
Source stream UINT64 id UINT64 value
1,1

SINK CORRECT_SINK UINT64 stream$id UINT64 stream$id
SELECT id, id FROM stream INTO CORRECT_SINK
----
1 1

SINK INCORRECT_SINK UINT64 stream$id
SELECT id, id FROM stream INTO INCORRECT_SINK
----
1
